[B][COLOR gold]v4.11.03[/COLOR][/B]
- Downloading fix

[B][COLOR gold]v4.11.02[/COLOR][/B]
- Try to pass correct meta to the player when playing random file from pack

[B][COLOR gold]v4.11.01[/COLOR][/B]
- Added "Browse" context menu option on torrent pack sources
- Removed "Autoplay sd-only" option
- Other minor fixes

[B][COLOR gold]v4.11.00[/COLOR][/B]
- Added basic torrent packs support
  (ResolveURL now supports multi-file torrent resolving via RD, AD, PM, DL)

[B][COLOR gold]v4.10.10[/COLOR][/B]
- Scrape title tweaks
- Library scraper fixes

[B][COLOR gold]v4.10.09[/COLOR][/B]
- Removed "Hide spoilers" feature, as this can be handled by Kodi itself:
  Kodi settings/Media/Videos/Show information for unwatched items
- Added Dolby-Vision sources filter

[B][COLOR gold]v4.10.08[/COLOR][/B]
- Added option to hide spoilers for unwatched episodes (plot and/or thumb)
- Remove uncached torrents from sources list when autoplay is on,
  regardless of setting
- Other minor fixes

[B][COLOR gold]v4.10.07[/COLOR][/B]
- Cacheing fixes

[B][COLOR gold]v4.10.06[/COLOR][/B]
- Minor fixes

[B][COLOR gold]v4.10.05[/COLOR][/B]
- Alternative (faster) database for Netflix episode ids
- Adjust to Rd API changes that removed their 100-hashes-per-request limit
  upon magnet instant availability check

[B][COLOR gold]v4.10.04[/COLOR][/B]
- Fixed Netflix official provider returning show id instead of episode id
- Bookmarks database initialisation fix
- Duplicate magnet hashes filtering tweak

[B][COLOR gold]v4.10.03[/COLOR][/B]
- Official providers cleanup
- Library scraper transfered from Oathscrapers to built-in

[B][COLOR gold]v4.10.02[/COLOR][/B]
- Added Paramount+ on supported official providers

[B][COLOR gold]v4.10.01[/COLOR][/B]
- Added Hulu on supported official providers
- Some cleanup

[B][COLOR gold]v4.10.00[/COLOR][/B]
- Added official streams providers.
  For these providers to work, their equivalent Kodi add-on is required