@@ -1,3 +1,9 @@
+[B][COLOR gold]v4.11.04[/COLOR][/B]
+- Added My Services category under My Movies/My TV Shows.
+  This category is activated only if there are any Official providers enabled,
+  and contains items by those providers (sorted by popularity) that are available
+  to stream on the country that is defined on Providers/Country code setting.
+
 [B][COLOR gold]v4.11.03[/COLOR][/B]
 - Downloading fix
 
